[package]
name = "flyos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
# 使用cargo bootimage命令时才能调用cargo xbuild
[package.metadata.bootimage]
build-command = ["xbuild"]