[package]
name = "flyos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.3"
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"
# 使用cargo bootimage命令时才能调用cargo xbuild
[package.metadata.bootimage]
build-command = ["xbuild"]
test-timeout = 300          # (in seconds)


test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio", 
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1      exp: 10000 0000 -> 10000 0000(32) -> x | 1 11000 0000

[dependencies.lazy_static]
lazy_static = "1.5.0"
features = ["spin_no_std"]


[[test]]
name = "should_panic"
harness = false